# linux_bt_proxy

./: .gitignore  Cargo.toml  README.rst  aio_test_client.py  ble_proxy.py  btproxy_test_client.py  build.rs  get_device_info.py  test_client.py
.github/workflows/: ci.yml  release.yml
debian/: postinst  postrm
proto/: NOTICE.txt  api_options_pb2.py  api_pb2.py
scripts/: build-packages.sh  test-packages.sh  update-proto.sh
src/: api.rs  ble.rs  context.rs  handlers.rs  main.rs  mdns.rs  proto.rs  server.rs  utils.rs
src/api/: api.rs  api_options.rs  mod.rs
systemd/: linux-bt-proxy.service
