[package]
name = "linux_bt_proxy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.13"
mac_address = "1.1"
protobuf = "3.7"
log = "0.4"
env_logger = "0.11"
bytes = "1"
gethostname = "1.0.2"
libc = "0.2.174"
zbus  = "5"
anyhow = "1.0.98"
futures-util = "0.3.31"

[build-dependencies]
protobuf = "3.7"
protobuf-codegen = "3.7"
chrono = "0.4.41"
