[package]
name = "linux_bt_proxy"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Ross Reedstrom <ross@reedstrom.org>"]
description = "A Bluetooth advertisement proxy for Home Assistant using the ESPHome API"
license = "GPL-3.0-or-later"

[package.metadata.deb]
name = "linux-bt-proxy"
maintainer = "Ross Reedstrom <ross@reedstrom.org>"
depends = "systemd"
section = "utils"
priority = "optional"
assets = [
    ["target/release/linux_bt_proxy", "usr/bin/", "755"],
    ["systemd/linux-bt-proxy.service", "lib/systemd/system/", "644"]
]
maintainer-scripts = "debian"
extended-description = """
A Bluetooth advertisement proxy for Home Assistant using the ESPHome API.
Runs as a daemon, forwarding BLE advertisements via TCP to Home Assistant.
"""

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/linux_bt_proxy", dest = "/usr/bin/linux_bt_proxy", mode = "755" },
    { source = "systemd/linux-bt-proxy.service", dest = "/lib/systemd/system/linux-bt-proxy.service", mode = "644" }
]
[package.metadata.generate-rpm.requires]
systemd = "*"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.13"
mac_address = "1.1"
protobuf = "3.7"
log = "0.4"
env_logger = "0.11"
bytes = "1"
gethostname = "1.0.2"
libc = "0.2.174"
zbus  = "5"
anyhow = "1.0.98"
futures-util = "0.3.31"

[build-dependencies]
protobuf = "3.7"
protobuf-codegen = "3.7"
chrono = "0.4.41"
